# lifetime-reservation-bot

./:  lifetime_bot_v2.py  .env.example  .gitignore  README.md  README_v2.md  lifetime_bot.py  lifetime_bot_v2.py  lifetime_reservation.py  pyproject.toml  requirements.txt
.github/: keepalive.txt
.github/workflows/: LT-Bot-Me.yml  LT-Bot-Me_v2.yml  LT-Bot-Queen.yml  Queen Lifetime Bot Automation  bot.yml  keepalive.yml  lifetime-bot.yml  main.yml
archive/: lifetime_bot.py
src/lifetime_bot/: __init__.py  __main__.py  api.py  auth.py  bootstrap.py  bot.py  config.py  errors.py  messages.py  models.py  notifier.py  notify_result.py  orchestrator.py  parsers.py  reservations.py  runner.py
src/lifetime_bot/notifications/: __init__.py  base.py  email.py  sms.py
src/lifetime_bot/utils/: __init__.py  timing.py
src/lifetime_bot/webdriver/: __init__.py  driver.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_bot_integration.py  test_config_integration.py  test_notifications_integration.py
tests/unit/: __init__.py  test_api.py  test_auth.py  test_bot.py  test_config.py  test_main.py  test_messages.py  test_notifications.py  test_notifier.py  test_notify_result.py  test_orchestrator.py  test_parsers.py  test_reservations.py  test_runner.py  test_timing.py  test_webdriver.py
